--- a/clusters/my-cluster/podinfo-kustomization.yaml
+++ b/clusters/my-cluster/podinfo-kustomization.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: podinfo
-  namespace: flux-system
+  namespace: flux-demo
 spec:
   interval: 5m0s
   path: ./kustomize
